# python-poetry-template

./: .gitattributes  .gitignore  .pre-commit-config.yml  404.html  CHANGELOG.md  README.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: github-ci-cd.yml  github-docs.yml
assets/: config.toml
dependabot/: index.html
dockers/dev/: dockerfile
docs/: dependabot.md  index.md  mkdocs.md  registry.md  structure.md  workflows.md
docs/stylesheets/: extra.css
mkdocs/: index.html
notebooks/: example.ipynb
reference/SUMMARY/: index.html
reference/pypoetry_template/: index.html
reference/pypoetry_template/math/: index.html
registry/: index.html
scripts/: example.py
search/: search_index.json
src/pypoetry_template/: __init__.py  math.py
structure/: index.html
tests/test_pypoetry_template/: test_poetry_template.py
workflows/: index.html
