[tool.poetry]
name = "pypoetry_template"
version = "0.0.1"
description = "Python project template using Poetry (Github version)"
authors = ["author <author@mail.com>"]
repository = "https://github.com/povanberg/python-poetry-template.git"
documentation = "https://povanberg.github.io/python-poetry-template"
readme = "README.md"
license = "GPL3.0 license"
packages = [
    {include = "pypoetry_template", from = "src"}
]

[tool.poetry.dependencies]
python = ">=3.8.1,<=3.11"
wheel = "^0.40.0"
notebook = "^6.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pre-commit = "^3.2.0"
mypy = "^0.991"
isort = "^5.12.0"
black = "^22.10.0"
commitizen = "^2.42.1"
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.3"
pylint = "^2.17.1"
bandit = "^1.7.5"
safety = "^2.3.5"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.5"
mkdocstrings = "^0.20.0"
mkdocstrings-python = "^0.8.0"
mkdocs-gen-files = "^0.4.0"
mkdocs-literate-nav = "^0.6.0"
mkdocs-section-index = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
version_files = ["pyproject.toml:^version"]
tag_format = "$version"
update_changelog_on_bump = true

[tool.black]
ignore = ['E203', 'E266', 'E501', 'W503', 'F403']
line-length = 88
target-version = ['py39']

[tool.flake8]
ignore = ['E203', 'E266', 'E501', 'W503', 'F403']
per-file-ignores = [
    '__init__.py:F401',
]
max-line-length = 88
count = true

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 88
disable = "C0103"
ignore-paths = "docs, scripts, tests"

[tool.isort]
profile = "black"

[tool.mypy]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning"
]
pythonpath = [
  "src"
]

[tool.bandit]
tests = ["B201", "B301"]
skips = ["B101", "B601"]
